# rhyolite

./: .gitattributes  .gitignore  Cargo.toml  README.md  bun.lockb  index.html  package-lock.json  package.json  settings.json  styles.css  tailwind.config.cjs  tailwind.config.js  vite.config.js
.github/workflows/: main.yml  rust.yml  rust_ci.yml
docs/: index.html
packaging/: Rhyolite.desktop  build.md
packaging/linux/: Rhyolite.spec  install.sh  install2.sh
src/: .prettierrc  app.css  app.html  app.rs  index.html  main.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/Crates/markdown_engine/: Cargo.toml
src-tauri/Crates/markdown_engine/src/: headers.rs  lib.rs  paragraph.rs
src-tauri/Crates/markdown_engine/src/handlers/: blocks.rs  formatting.rs  headers.rs  lists.rs  mod.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: io.rs  lib.rs  main.rs  tabs.rs
src-tauri/src/editor/: helper_fns.rs  io.rs  markdown_handler.rs  mod.rs  tabs.rs
src-tauri/src/settings/: setting.rs
src/components/: codemirror-edtior.svelte  command-palette.svelte  content-editor.svelte  document-tab-item.svelte  document.svelte  general-settings.svelte  home-hotkeys.svelte  keyboard-shortcuts.svelte  recentfilesmenu.svelte  settingsmenu.svelte  sidebar.svelte  tabs.svelte  titlebar.svelte  workspace.svelte
src/components/content-editor/: content-editor.svelte
src/components/content-editor/components/: custom-extentions.ts  toolbar-button.svelte
src/helpers/: common.helper.ts
src/lib/: state.ts
src/lib/components/: commandpalette.svelte  editor.svelte  editor.ts  files.svelte  settingsmenu.svelte  sidebar.svelte  tabsbar.svelte  titlebox.svelte  word-char-counter.svelte
src/lib/functions/: functions.svelte
src/lib/static/: close.svg.svelte  command_palette.svg.svelte  maximise.svg.svelte  minimise.svg.svelte  recent_files.svg.svelte  restore.svg.svelte  settings.svg.svelte
src/lib/themes/: catppuccinLatte.ts  catppuccinMacchiato.ts  catppuccinMocha.ts  coffee.ts  default.ts  greenscreen.ts  rosePineDawn.ts  rosePineMain.ts  rosePineMoon.ts
src/routes/: +layout.svelte  +page.svelte  commandpalette.svelte  workspace.svelte
src/services/: api.interface.ts  api.service.ts  document.service.ts  tab.service.ts  tauri-invoke.service.ts
src/store/: command-palette.store.ts  content-editor.store.ts  tabs.store.ts
src/stores/: command-palette.store.ts  content-editor.store.ts  recent-files.store.ts  settings-menu.store.ts  tabs.store.ts  theme.store.ts
src/styles/: commandPalette.css  quill-dark-theme.css  quill-editor.css  styles.css
src/styles/themes/: pastel-purple.css  rhyolite-dark.css
src/themes/: catpuccinMacchiato.css
src/types/: document.ts  tab.ts  theme.d.ts
