[package]
name = "markdown_engine"
version = "0.1.0"
edition = "2021"

description = "Library and binary to convert simple html documents into markdown"
readme = "README.md"
keywords = ["html", "markdown", "converter"]
categories = ["development-tools", "parsing", "parser-implementations"]
license = "GPL-3.0+"

[lib]
name = "markdown_engine"
crate-type = ["rlib", "dylib", "staticlib"]

[dependencies]
# string_cache_codegen = "0.4.2" # Needed for markup5ever
lazy_static = "1.5.0"
html5ever = "0.29.0"
markup5ever_rcdom = "0.5.0-unofficial"
regex = "1.11.1"
percent-encoding = "2.3.1"

[dev-dependencies]
spectral = "0.6.0"
pretty_assertions = "1.4.1"
indoc = "2.0.5"

[profile.release]
debug = false
lto = true
panic = 'abort'

# To use this project on Android we need JNI
[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21.1", default-features = false }
